388234 Fixed by forcing overflow to be hidden

--- a/org.eclipse.virgo.management.console/src/main/webapp/styles/artifacts.css
+++ b/org.eclipse.virgo.management.console/src/main/webapp/styles/artifacts.css
@@ -79,7 +79,8 @@ iframe {
 }
 
 .artifact-attribute {
-	overflow-x: auto; 
+	overflow-x: auto;
+	overflow-y: hidden;
 	word-wrap: break-word;	
 }
 
